force-app/main/default/objects/Telemedicine_Records__c/Telemedicine_Records__c.object-meta.xml
<CustomObject>
    <label>Telemedicine Records</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telemedicine Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>