force-app/main/default/objects/Telemedicine_Records__c/fields/Consulation_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulation_Date__c</fullName>
    <label>Consulation_Date</label>
    <type>DateTime</type>
</CustomField>