force-app/main/default/objects/Telemedicine_Records__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients</label>
    <referenceTo>Patients__c</referenceTo>
    <relationshipLabel>Telemedicine Records</relationshipLabel>
    <relationshipName>Telemedicine_Records</relationshipName>
    <type>Lookup</type>
</CustomField>