force-app/main/default/objects/Telemedicine_Records__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <label>Prescription</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>