force-app/main/default/objects/Telemedicine_Records__c/fields/tele_status__c.field-meta.xml
<CustomField>
    <fullName>tele_status__c</fullName>
    <label>tele_status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>