force-app/main/default/objects/Telemedicine_Records__c/fields/tele_status_c__c.field-meta.xml
<CustomField>
    <fullName>tele_status_c__c</fullName>
    <label>tele_status_c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>