force-app/main/default/objects/Telemedicine_Records__c/recordTypes/Phone_Consultation.recordType-meta.xml
<RecordType>
    <fullName>Phone_Consultation</fullName>
    <active>true</active>
    <description>Telemedicine via phone</description>
    <label>Phone Consultation</label>
</RecordType>