force-app/main/default/objects/Telemedicine_Records__c/recordTypes/Video_Consultation.recordType-meta.xml
<RecordType>
    <fullName>Video_Consultation</fullName>
    <active>true</active>
    <description>Telemedicine via video call</description>
    <label>Video Consultation</label>
</RecordType>