force-app/main/default/objects/Telemedicine_Records__c/validationRules/Validate_Telemedicine_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Telemedicine_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Patient__c) || ISBLANK(Doctor__c)</errorConditionFormula>
    <errorMessage>Patient and Doctor must be selected before saving a Telemedicine session.</errorMessage>
</ValidationRule>